@@ -3,49 +3,60 @@ package org.example.demo.service;
 import org.example.demo.dto.FuelLogDto;
 import org.example.demo.mapper.FuelLogMapper;
 import org.example.demo.model.FuelLog;
+import org.example.demo.model.Vehicle;
 import org.example.demo.repository.FuelLogRepository;
-import org.springframework.jdbc.core.JdbcTemplate;
+import org.example.demo.repository.VehicleRepository;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Propagation;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 public class FuelLogService {
     private final FuelLogRepository repository;
-    private final JdbcTemplate jdbcTemplate;
+    private final VehicleRepository vehicleRepository;
     private final FuelLogMapper mapper;
 
-    public FuelLogService(FuelLogRepository repository, JdbcTemplate jdbcTemplate, FuelLogMapper mapper) {
+    public FuelLogService(FuelLogRepository repository, VehicleRepository vehicleRepository, FuelLogMapper mapper) {
         this.repository = repository;
-        this.jdbcTemplate = jdbcTemplate;
+        this.vehicleRepository = vehicleRepository;
         this.mapper = mapper;
     }
 
+    @Transactional(readOnly = true, propagation = Propagation.SUPPORTS)
     public List<FuelLogDto> getAll() {
-        return repository.findAll().stream()
-                .map(mapper::toDto)
-                .collect(Collectors.toList());
+        return repository.findAll().stream().map(mapper::toDto).toList();
     }
 
+    @Transactional(readOnly = true, propagation = Propagation.SUPPORTS)
     public Optional<FuelLogDto> getById(Long id) {
         return repository.findById(id).map(mapper::toDto);
     }
 
+    @Transactional(propagation = Propagation.REQUIRED)
     public FuelLogDto create(FuelLogDto dto) {
+        Vehicle vehicle = vehicleRepository.findById(dto.getVehicleId()).orElseThrow();
         FuelLog entity = mapper.toEntity(dto);
+        entity.setVehicle(vehicle);
         return mapper.toDto(repository.save(entity));
     }
 
+    @Transactional(propagation = Propagation.REQUIRED)
     public Optional<FuelLogDto> update(Long id, FuelLogDto updatedDto) {
-        if (!repository.existsById(id)) return Optional.empty();
+        if (!repository.existsById(id)) {
+            return Optional.empty();
+        }
 
+        Vehicle vehicle = vehicleRepository.findById(updatedDto.getVehicleId()).orElseThrow();
         FuelLog entity = mapper.toEntity(updatedDto);
         entity.setId(id);
+        entity.setVehicle(vehicle);
         return Optional.of(mapper.toDto(repository.save(entity)));
     }
 
+    @Transactional(propagation = Propagation.REQUIRED)
     public boolean delete(Long id) {
         if (repository.existsById(id)) {
             repository.deleteById(id);
@@ -54,22 +65,9 @@ public class FuelLogService {
         return false;
     }
 
-    // Метод через JdbcTemplate
+    @Transactional(readOnly = true, propagation = Propagation.SUPPORTS)
     public List<FuelLogDto> getByVehicleIdViaJdbc(Long vehicleId) {
-        String sql = "SELECT * FROM fuel_logs WHERE vehicle_id = ?";
-
-        List<FuelLog> list = jdbcTemplate.query(sql, (rs, rowNum) -> {
-            FuelLog entity = new FuelLog();
-            entity.setId(rs.getLong("id"));
-            entity.setVehicleId(rs.getLong("vehicle_id"));
-            entity.setLiters(rs.getDouble("liters"));
-            entity.setPricePerLiter(rs.getBigDecimal("price_per_liter"));
-            entity.setRefuelDate(rs.getString("refuel_date"));
-            return entity;
-        }, vehicleId);
-
-        return list.stream()
-                .map(mapper::toDto)
-                .collect(Collectors.toList());
+        return repository.findByVehicle_Id(vehicleId).stream().map(mapper::toDto).toList();
     }
 }
+
