@@ -4,48 +4,51 @@ import org.example.demo.dto.VehicleDto;
 import org.example.demo.mapper.VehicleMapper;
 import org.example.demo.model.Vehicle;
 import org.example.demo.repository.VehicleRepository;
-import org.springframework.jdbc.core.JdbcTemplate;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Propagation;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 public class VehicleService {
     private final VehicleRepository repository;
-    private final JdbcTemplate jdbcTemplate;
     private final VehicleMapper mapper;
 
-    public VehicleService(VehicleRepository repository, JdbcTemplate jdbcTemplate, VehicleMapper mapper) {
+    public VehicleService(VehicleRepository repository, VehicleMapper mapper) {
         this.repository = repository;
-        this.jdbcTemplate = jdbcTemplate;
         this.mapper = mapper;
     }
 
+    @Transactional(readOnly = true, propagation = Propagation.SUPPORTS)
     public List<VehicleDto> getAll() {
-        return repository.findAll().stream()
-                .map(mapper::toDto)
-                .collect(Collectors.toList());
+        return repository.findAll().stream().map(mapper::toDto).toList();
     }
 
+    @Transactional(readOnly = true, propagation = Propagation.SUPPORTS)
     public Optional<VehicleDto> getById(Long id) {
         return repository.findById(id).map(mapper::toDto);
     }
 
+    @Transactional(propagation = Propagation.REQUIRED)
     public VehicleDto create(VehicleDto dto) {
         Vehicle entity = mapper.toEntity(dto);
         return mapper.toDto(repository.save(entity));
     }
 
+    @Transactional(propagation = Propagation.REQUIRED)
     public Optional<VehicleDto> update(Long id, VehicleDto updatedDto) {
-        if (!repository.existsById(id)) return Optional.empty();
+        if (!repository.existsById(id)) {
+            return Optional.empty();
+        }
 
         Vehicle entity = mapper.toEntity(updatedDto);
         entity.setId(id);
         return Optional.of(mapper.toDto(repository.save(entity)));
     }
 
+    @Transactional(propagation = Propagation.REQUIRED)
     public boolean delete(Long id) {
         if (repository.existsById(id)) {
             repository.deleteById(id);
@@ -54,23 +57,9 @@ public class VehicleService {
         return false;
     }
 
-    // Метод через JdbcTemplate
+    @Transactional(readOnly = true, propagation = Propagation.SUPPORTS)
     public List<VehicleDto> getByMakeViaJdbc(String make) {
-        String sql = "SELECT * FROM vehicles WHERE make = ?";
-
-        List<Vehicle> vehicles = jdbcTemplate.query(sql, (rs, rowNum) -> {
-            Vehicle vehicle = new Vehicle();
-            vehicle.setId(rs.getLong("id"));
-            vehicle.setMake(rs.getString("make"));
-            vehicle.setModel(rs.getString("model"));
-            vehicle.setLicensePlate(rs.getString("license_plate"));
-            vehicle.setManufactureYear(rs.getInt("manufacture_year"));
-            vehicle.setStatus(rs.getString("status"));
-            return vehicle;
-        }, make);
-
-        return vehicles.stream()
-                .map(mapper::toDto)
-                .collect(Collectors.toList());
+        return repository.findByMake(make).stream().map(mapper::toDto).toList();
     }
 }
+
